--- a/css/main.scss
+++ b/css/main.scss
@@ -4,12 +4,12 @@
 @charset "utf-8";
 
 // Our variables
-$base-font-family: 'PT Serif', Georgia, Times, 'Times New Roman', serif;
+$base-font-family: Gulim, 'PT Serif', Georgia, Times, 'Times New Roman', serif;
 $base-font-size:   12pt;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$mono-font-family: 'Source Code Pro', Menlo, Monaco, Inconsolata;
+$mono-font-family: 'Consolas', Menlo, Monaco, Inconsolata;
 
 $text-color:       hsl(0, 0%, 25%);
 
