CSS수정 & navigati bar 추가

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,7 @@
 <footer>
+  <div class="navigation_bar" style="width:100%;">
+    <span>Back</span>
+  </div>
   <div class="container">
     <div class="row biography">
       <div class="col-sm-4">
