--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -179,6 +179,11 @@ footer {
   }
 }
 
+.navigation_bar span { 
+  font-size: 12pt;
+  color: black;
+}
+
 .footnotes {
   border-top: 1px solid $subdued-border;
   padding-top: 1em;
