--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,10 @@
 <html>
   {% include head.html %}
   <body>
-    {% include navbar.html %}
-    {{ content }}
+    <div class="container main">
+      {% include navbar.html %}
+      {{ content }}
+    </div>
     {% include footer.html %}
   </body>
 </html>
