--- a/css/main.scss
+++ b/css/main.scss
@@ -25,6 +25,8 @@ $subdued-border:   rgba($bg-color-darker, 0.5);
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
+  "fonts",
+  "settings",
   "base",
   "syntax-highlighting"
 ;
